# Ps3EyeManager

./: README.md  start_ps3eye_manager.bat
ps3eye_manager/: requirements.txt  start.py
ps3eye_manager/installer/: README.md  install.bat  install_dependencies.py
ps3eye_manager/src/: __init__.py  main_v3.py
ps3eye_manager/src/config/: __init__.py  settings_v3.py
ps3eye_manager/src/core/: __init__.py  camera.py  camera_client.py  camera_server.py  camera_service.py  ps3eye_camera.py  virtual_camera.py
ps3eye_manager/src/driver/: CMakeLists.txt  install_driver.bat  virtual_camera.cpp
ps3eye_manager/src/drivers/: PS3EyeCamera.inf  ps3eyecamera.cat
ps3eye_manager/src/effects/: __init__.py  video_effects.py
ps3eye_manager/src/gui/: __init__.py  camera_controls.py  effects_controls.py  main_window.py  settings_panel.py  video_widget.py
ps3eye_manager/src/utils/: logging_config.py
ps3eye_manager/src/virtual_cam/: virtual_camera.py
